# lvgl-claudio

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/app_calendar/: CMakeLists.txt  app_calendar.c  app_calendar.h
components/app_clock/: CMakeLists.txt  app_clock.c  app_clock.h
components/esp_wifi_station_bsp/: CMakeLists.txt  esp_wifi_station_bsp.c  esp_wifi_station_bsp.h
components/i2c_bsp/: i2c_bsp.h
components/ui/: CMakeLists.txt  lvgl-claudio.eez-project  lvgl-claudio.eez-project-ui-state
components/ui/ui/: actions.c  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  vars.h
components/ui/ui/fonts/: ui_font_love_days_12.c  ui_font_love_days_128.c  ui_font_love_days_24.c  ui_font_love_days_32.c  ui_font_love_days_48.c  ui_font_love_days_64.c  ui_font_love_days_96.c
main/: CMakeLists.txt  app_lvgl.c  app_lvgl.h  app_sdcard.c  board_config.c  board_config.h  fonts.h  idf_component.yml  main.c
main/modules/: app_clock.c  app_clock.h  app_lvgl.c  app_lvgl.h  app_sdcard.h
main/ui/: eez-flow.h  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_love_days_128.c  ui_font_love_days_24.c  ui_font_love_days_32.c  ui_font_love_days_48.c  ui_font_love_days_64.c  ui_font_love_days_96.c
