file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.c)
file(GLOB_RECURSE SOURCES_MODULES ${CMAKE_CURRENT_LIST_DIR}/modules/*.c)
file(GLOB_RECURSE SOURCES_UI_EVENTS ${CMAKE_CURRENT_LIST_DIR}/ui_events/*.c)

idf_component_register(
    SRCS ${SOURCES} ${SOURCES_MODULES} ${SOURCES_UI_EVENTS}
    INCLUDE_DIRS "."
    INCLUDE_DIRS "modules"
    INCLUDE_DIRS "ui_events"
)
